--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,9 @@ jobs:
         with:
           context: "{{defaultContext}}:builds/unraid/"
           push: true
-          build-args: UID=99, GID=100, PREINSTALL_LIBS=false
+          build-args: |
+            UID=99
+            GID=100
+            PREINSTALL_LIBS=false
           platforms: linux/amd64
-          tags: richy1989/meshcentral:latest
+          tags: richy1989/meshcentral:latest #, richy1989/meshcentral:$(npm show meshcentral version)
