--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,9 @@ name: Build Meshcentral Unraid Image
 on:
   push:
 
+env:
+  Mesh_V: Monday
+
 jobs:
   docker:
     runs-on: ubuntu-latest
@@ -12,9 +15,10 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Setup node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 20.x
+      - run: Mesh_V = $(npm show meshcentral version)
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
