--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20.x
-      - run: $Mesh_V=$(npm show meshcentral version)
+      - run: Mesh_V:$(npm show meshcentral version)
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
