--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20.x
-      - run: echo "Mesh_V=$(npm show meshcentral version) >> $GITHUB_ENV
+      - run: echo "Mesh_V=$(npm show meshcentral version)" >> $GITHUB_ENV
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
