updated github actions with new updated actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,4 +34,6 @@ jobs:
             GID=100
             PREINSTALL_LIBS=false
           platforms: linux/amd64
-          tags: richy1989/meshcentral:latest, richy1989/meshcentral:$Mesh_V
+          tags: |
+            richy1989/meshcentral:latest
+            echo "richy1989/meshcentral:$Mesh_V"
