--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,8 @@ name: Build Meshcentral Unraid Image
 
 on:
   push:
+  schedule:
+    - cron: "0 16 * * 6"
 
 env:
   Mesh_V: 0
@@ -14,7 +16,7 @@ jobs:
         uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      - name: Setup node
+      - name: Setup node and get Meshcentral version
         uses: actions/setup-node@v4
         with:
           node-version: 20.x
