--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,11 @@ jobs:
         uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+      - name: Checkout Meshcentral Repo
+        uses: actions/checkout@v4
+        with:
+          repository: Ylianst/MeshCentral
+          path: .
       - name: Setup node and get Meshcentral version
         uses: actions/setup-node@v4
         with:
@@ -29,13 +34,14 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
-          context: "{{defaultContext}}:builds/unraid/"
+          context: "{{defaultContext}}:docker_unraid/"
           push: true
           build-args: |
             UID=99
             GID=100
             PREINSTALL_LIBS=false
+            INCLUDE_MONGODBTOOLS="yes"
           platforms: linux/amd64
           tags: |
-            richy1989/meshcentral:latest
-            richy1989/meshcentral:${{ env.Mesh_V }}
+            richy1989/meshcentral-dev:latest
+            richy1989/meshcentral-dev:${{ env.Mesh_V }}
