use meshcentral repo

--- a/docker_unraid/Dockerfile
+++ b/docker_unraid/Dockerfile
@@ -1,7 +1,7 @@
 FROM --platform=$BUILDPLATFORM node:20-alpine AS builder
 
 RUN mkdir -p /opt/meshcentral/meshcentral
-COPY ./MeshCentral /opt/meshcentral/meshcentral/
+COPY ./MeshCentral/ /opt/meshcentral/meshcentral/
 WORKDIR /opt/meshcentral
 
 ARG DISABLE_MINIFY=""
