--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: Ylianst/MeshCentral
-          path: 'MeshCentral'
+          path: 'meshcentral'
       - name: Setup node and get Meshcentral version
         uses: actions/setup-node@v4
         with:
