debug build action

--- a/docker_unraid/Dockerfile
+++ b/docker_unraid/Dockerfile
@@ -2,7 +2,7 @@ FROM --platform=$BUILDPLATFORM node:20-alpine AS builder
 
 RUN mkdir -p /opt/meshcentral/meshcentral
 COPY ./ /opt/meshcentral/meshcentral/
-RUN ls /opt/meshcentral/meshcentral/
+
 WORKDIR /opt/meshcentral
 
 ARG DISABLE_MINIFY=""
@@ -16,6 +16,8 @@ RUN if ! [ -z "$DISABLE_TRANSLATE" ] && [ "$DISABLE_TRANSLATE" != "yes" ] && [ "
     && [ "$DISABLE_TRANSLATE" != "true" ] && [ "$DISABLE_TRANSLATE" != "TRUE" ]; then \
     echo -e "\e[0;31;49mInvalid value for build argument DISABLE_TRANSLATE, possible values: yes/true\e[;0m"; exit 1; \
     fi
+
+RUN echo $(ls ./ -lah)
 
 # install translate/minify modules if need too
 RUN if [ -z "$DISABLE_MINIFY" ] || [ -z "$DISABLE_TRANSLATE" ]; then cd meshcentral && npm install html-minifier jsdom minify-js; fi
