--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           node-version: 20.x
       - run: echo "Mesh_V=$(npm show meshcentral version)" >> $GITHUB_ENV
-      - run: echo "ls -lah"
+      - run: echo $(ls -lah)
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
