debug build action

--- a/docker_unraid/Dockerfile
+++ b/docker_unraid/Dockerfile
@@ -2,7 +2,7 @@ FROM --platform=$BUILDPLATFORM node:20-alpine AS builder
 
 ARG GITHUB_WORKSPACE
 RUN mkdir -p /opt/meshcentral/meshcentral
-COPY "$GITHUB_WORKSPACE"/MeshCentral /opt/meshcentral/meshcentral/
+COPY MeshCentral /opt/meshcentral/meshcentral/
 
 WORKDIR /opt/meshcentral
 
