--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,12 +22,14 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: Ylianst/MeshCentral
+          path: 'mesh'
       - name: Setup node and get Meshcentral version
         uses: actions/setup-node@v4
         with:
           node-version: 20.x
       - run: echo "Mesh_V=$(npm show meshcentral version)" >> $GITHUB_ENV
       - run: echo $(ls -lah)
+      - run: echo $(ls ./mesh/ -lah)
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -36,6 +38,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
+          context: .
           push: true
           build-args: |
             UID=99
