--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,8 +28,8 @@ jobs:
         with:
           node-version: 20.x
       - run: echo "Mesh_V=$(npm show meshcentral version)" >> $GITHUB_ENV
-      - run: echo $(ls -lah)
-      - run: echo $(ls ./mesh/ -lah)
+      - run: echo $(ls)
+      - run: echo $(ls ./mesh/)
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -44,7 +44,7 @@ jobs:
             UID=99
             GID=100
             PREINSTALL_LIBS=false
-            INCLUDE_MONGODBTOOLS="yes"
+            INCLUDE_MONGODBTOOLS=yes
           platforms: linux/amd64
           tags: |
             richy1989/meshcentral-dev:latest
