--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         with:
           node-version: 20.x
       - run: echo "Mesh_V=$(npm show meshcentral version)" >> $GITHUB_ENV
-      - run: echo "APP_VERSION=$(grep -o '"version":\s*"[^"]*"' ./mesh/package.json | cut -f4- -d\" | tr -d '"');" >> $GITHUB_ENV
+      - run: echo "APP_VERSION=$(grep -o '"version":\s*"[^"]*"' ./mesh/package.json | cut -f4- -d\" | tr -d '"')" >> $GITHUB_ENV
       - run: echo $APP_VERSION
       - run: echo $(ls)
       - run: echo $(ls ./mesh/)
